--- a/app/styles/modules/scrollbar.scss
+++ b/app/styles/modules/scrollbar.scss
@@ -1,8 +1,8 @@
 @import "../vars";
 
 ::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+    width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-button {
